--- a/_config.yml
+++ b/_config.yml
@@ -1,3 +1,4 @@
+baseurl: /mall_doc
 # This is the default format. 
 # For more see: http://jekyllrb.com/docs/permalinks/
 permalink: /:categories/:year/:month/:day/:title 
