--- a/_config.yml
+++ b/_config.yml
@@ -126,9 +126,9 @@ JB :
   comments :
     provider : duoshuo
     duoshuo :
-      short_name : simpleyyt
+      short_name : loacalhost
     disqus :
-      short_name : simpleyyt
+      short_name : loacalhost
     livefyre :
       site_id : 123
     intensedebate :
