--- a/_config.yml
+++ b/_config.yml
@@ -129,15 +129,6 @@ JB :
       short_name : loacalhost
     disqus :
       short_name : loacalhost
-    livefyre :
-      site_id : 123
-    intensedebate :
-      account : 123abc
-    facebook :
-      appid : 123
-      num_posts: 5
-      width: 580
-      colorscheme: light
    
   # Settings for analytics helper
   # Set 'provider' to the analytics provider you want to use.
@@ -147,10 +138,8 @@ JB :
     provider : google 
     google : 
         tracking_id : 'UA-123-12'
-    getclicky :
-      site_id : 
-    mixpanel :
-        token : '_MIXPANEL_TOKEN_'
+    baidu :
+        token : '733ec144eb3dfbc2539ebf51674a3d09'
     piwik :
         baseURL : 'myserver.tld/piwik' # Piwik installation address (without protocol)
         idsite : '1'                   # the id of the site on Piwik
